# coralFutures

./: .gitignore  README.md  manage.py  pyproject.toml
coral_futures/: asgi.py  settings.py  urls.py  wsgi.py
home/: views.py
home/templates/home/: welcome.html
static/templates/: base.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: home.html  login.html  password_reset.html
