[tool.poetry]
name = "coral-futures"
version = "0.1.0"
description = ""
authors = ["Yulia Iakovleva <yulia_iakovleva@proton.me>"]
readme = "README.md"
packages = [{include = "coral_futures"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
