[tool.poetry]
name = "coralfutures"
version = "0.1.0"
description = ""
authors = ["Yulia Iakovleva <yulia_iakovleva@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
